--- a/src/less/animations.less
+++ b/src/less/animations.less
@@ -34,6 +34,7 @@
         position: absolute;
         top: @gutter-size;
         left: @gutter-size;
+        margin-right: @gutter-size;
         opacity: 1;
         &.ng-leave-active {
             opacity: 0;
